# ChangeLog for net-analyzer/pinger
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/pinger/ChangeLog,v 1.11 2008/04/22 13:33:05 drac Exp $

  22 Apr 2008; Samuli Suominen <drac@gentoo.org> pinger-0.32.ebuild,
  pinger-0.32c.ebuild:
  Move pkgconfig from RDEPEND to DEPEND.

  25 Feb 2008; <pva@gentoo.org> pinger-0.32c.ebuild:
  Making gtk+ optional dependency, bug #195926, reported by Davide Cendron.

  21 Jan 2008; Raúl Porcel <armin76@gentoo.org> +files/disable_gtk.patch,
  pinger-0.32c.ebuild:
  Add gtk and nls USE-flags, add patch from upstream, bug #195926

*pinger-0.32c (20 Jan 2008)

  20 Jan 2008; Raúl Porcel <armin76@gentoo.org> -pinger-0.30.ebuild,
  pinger-0.32.ebuild, +pinger-0.32c.ebuild:
  Version bump, x86 stable, remove old

  29 Oct 2007; Daniel Gryniewicz <dang@gentoo.org> pinger-0.32.ebuild:
  Marked ~amd64 for bug #195926

*pinger-0.32 (06 Apr 2007)

  06 Apr 2007; Marcelo Goes <vanquirius@gentoo.org> +pinger-0.32.ebuild:
  0.32 version bump.

  20 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Redigest for Manifest2

  14 Oct 2006; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
  Remove angusyoung from metadata.xml due to retiring.

  20 Sep 2005; <otavio@gentoo.org> pinger-0.30.ebuild:
  Corrected a typo in HOMEPAGE and marked as x86

  19 Jul 2005; David Holm <dholm@gentoo.org> pinger-0.30.ebuild:
  Added to ~ppc.

*pinger-0.30 (03 Jun 2005)

  03 Jun 2005; Otavio Piske <angusyoung@gentoo.org> +pinger-0.30.ebuild:
  Ebuild for pinger, initial release. Thanks to Mikel Olasagasti
  <hey_neken@euskal.org> for submitting the ebuild.
