@@ -1,7 +1,20 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX nessus-client-1.0.2-make.patch 2647 RMD160 866a8e5b6e11a544a9129251e0f73eda87f833c4 SHA1 8c43b5bc5c15d2e24e601217c1393c2033d1f635 SHA256 07328320939bd1b06eff907b298b91131aaa9f3f7c23e12d62bd29828406cef3
 DIST NessusClient-1.0.2.tar.gz 2058324 RMD160 e641d060fc1c4aaecdc75b3b18d8d6c3e4320c40 SHA1 bed8d5ac52f1e224cb41192a1a6b8cc568398bfb SHA256 e9c26c2cefce3e0e3eade69199272fcbf2e9c1bd19d51ae8f8d73b0e82aee1af
 DIST nessus-client.png.bz2 10043 RMD160 9d1af8ec4533da24e282ad3168fc29dd1fb9845c SHA1 71a09d8cc82336b0036dd318953a4d90e8d5b523 SHA256 857de50872354058de10fee0bd2bbc2a59e6ec56d75ccfd331847cf16142ce4c
-EBUILD nessus-client-1.0.2-r1.ebuild 1379 RMD160 d118851a7489a75376f2d0bb839e0b8ffaa718a1 SHA1 442395d928ab8b744274199e99a8e4f417176f30 SHA256 47e195f9e9a0e818147659222ee0d539fa382440e5d682f2b88ed7ae25ee71fc
-EBUILD nessus-client-1.0.2.ebuild 1224 RMD160 98b73d29d6fba8ba416fdec6ff01ea9dea9dc751 SHA1 ec3f6a7afb4e09f9eeb721ce84c8362c294fd6b5 SHA256 117ce094adc8229a72d9ccf71b00d5451816bfdf5b0d527ba4b3fe9efbad1da9
-MISC ChangeLog 2528 RMD160 f4a2f100b378a294d626974954f0f30250226b6d SHA1 f257af585c866d12d258cde28accec472561f7dd SHA256 7a58b2d498b13a98389558566815757ab5a01b076ce179259b87aecc1bb74cd7
+EBUILD nessus-client-1.0.2-r1.ebuild 1380 RMD160 8e32830e1bd6745e69f4c004ddf24b9e72e4c62f SHA1 3d0d7e27035620794475d1261b0ca30dbb4bb5b2 SHA256 cdc2e9902311a122c38bd5f875a2e51439f4009d93010fc13a41f370044c465e
+MISC ChangeLog 2679 RMD160 0529fd921b34f42586ca36fff9e55fc4941f505b SHA1 a978e27b217993886ddad36832327a87caa0fff3 SHA256 dd75ea7749cb7fc1e684212799d139a610a5fd1e9006467f0e3a650a5836a4c1
 MISC metadata.xml 159 RMD160 28e799fe0fd02aaab9d4bbe5595f133101606f5b SHA1 9f5df3eabd621951a959cc8e0e2e0d352cd1fe1e SHA256 b75c711bd971e46f0ec957e833c60879b0c5023e0bb94409a6255781b69f6dc6
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iQEcBAEBAgAGBQJNkPtUAAoJEEqz6FtPBkyjmooIAI88A2VM+ygHI4LeF0tLiFk1
+gZTra7Yrf/oYfdXtxtgKRdQ+D01jtl5ekyWqTwu8XNjsiweo6lupDiwRba2A/W/T
+IYNFw5LAN6WvJ6I/0yzz6KswawmD1JAHn1WHqC7H2Q0bjNrMzGOc+hUlJX49NNVX
+ENYFm7v7GRuoY+Y4Soye+edpka60Rc51ngYbkrz49DZt+eH0eXioXFqtzZ39Jhxn
+s0SZ4OTbunYUZhVnNW2M6PBMtTr08ab8Z10w1wIZkfx9dK1NqpdxOj6wtMN05u3d
+kIA9SNhoHcO04RIe52SKOfNAg0zTfjtujvvIY/zsG0jYncs7pYG2YaNuFjGwFdo=
+=oftf
+-----END PGP SIGNATURE-----
