@@ -1,8 +1,22 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX disable_gtk.patch 856 RMD160 01e673401c9aec3786b32707829dcff72ff4d8fc SHA1 04c3bd9ae87aa3a17775b2e9fe049976cc6059fb SHA256 34066e9061cc9a88eb7880576626532ed3e23d2eb9d5d05f581e56bf457f74f1
 DIST gtk-2.0-for-pinger.m4.bz2 2508 RMD160 f5fc7a3a3c4fcfe03356170371113a1b0f18eda6 SHA1 c72993fdb224ffba6afeca43a60303ed0350c56f SHA256 59152f9a4a1af5cf09f2aaa804c9071afe3eb6632162f1660d85c820db342eba
 DIST pinger-0.32.tar.gz 225609 RMD160 aac7f236dcad63a58071650f3342f39fadcefab3 SHA1 3f31c8b4f0f0727fa9c3ce23b15d4f25af9b54b6 SHA256 f69735accf2329c7cd7c32b0857ad1567e71a3384b122aeeaf105e71744d4e8c
 DIST pinger-0.32c.tar.gz 227288 RMD160 a64219a5a7abf7b0e304eda9c28c03725487ec34 SHA1 e466708261860e385cffce5a720970fd8d9a91d7 SHA256 955b7057e3e963074298cdcf3b86930bc3f0a3e3465f62df1d36fecfbe097bfd
-EBUILD pinger-0.32.ebuild 672 RMD160 4f376faa5a33e98f5ed988b0960412a7b3eb4499 SHA1 6b0dfd06e675f55b9884a51e1766654ebc5c090d SHA256 85b519d5f7b11eca7d03cbe6d2f43f2da5e2fbb02f3e90b4e2ebf183b3710851
-EBUILD pinger-0.32c.ebuild 1148 RMD160 88e4d3d216ef44c66114900130e1a4f781cd854f SHA1 0d388f17bacb1bf6cf23033142a6f9de030a06c0 SHA256 97347c7baad9ed5e049de40a8a82f126dc6f16d38e4c3c63f627aff897c3078c
-MISC ChangeLog 1665 RMD160 35576f4b82c040ffa49246649d4cde512f9c7587 SHA1 b9bd249b097539793c1ae38bed75cd775beaadfb SHA256 8385b0807d6ad8d02d30c1336ccf7cef1e994b4dab1b135bf28556dc9dff4897
+EBUILD pinger-0.32.ebuild 718 RMD160 5147651a3c8c5760e1ce5e394f8c11e14aaa10f3 SHA1 6269dcb80fa3beca2079dc38b93b532f3a51681a SHA256 494bdfaaa5aad36822895ff7fb527159b5c7e79bd5c03c2dc9fa2383275be250
+EBUILD pinger-0.32c.ebuild 1089 RMD160 2ac033f27f0707026612fff36911b2d7053fdaf7 SHA1 9420c05ff782fd9e70f35c52d2883c81706bf539 SHA256 e55e54f059c9198079935dadb195f011fc63b26217859d9d5d5c7641749bfcb1
+MISC ChangeLog 1810 RMD160 48d027f96e5b103122d662094f01d753a8cbcda0 SHA1 278713ce58e1537c922ae6b6442e08f1d0c5a436 SHA256 8d6a2521cee215469ba3eb60e5bbd4dc3225af655c09cf6eba489efe77290c8f
 MISC metadata.xml 159 RMD160 28e799fe0fd02aaab9d4bbe5595f133101606f5b SHA1 9f5df3eabd621951a959cc8e0e2e0d352cd1fe1e SHA256 b75c711bd971e46f0ec957e833c60879b0c5023e0bb94409a6255781b69f6dc6
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iQEcBAEBAgAGBQJNkPqIAAoJEEqz6FtPBkyjFDoIALGvGCkAMkclTo+pqqsjZ+vp
+5LEPQC7GdDUy2axd03AVN1nlX1OavssSBk+5z8nZ0r5oWqy8xLps3fBrIIJ9uqHS
+yPidtpHTVA1L9vCAQ3KaIfkI7ueWK66meS8dc3XxaUD58PbeHuaE6gO/4vap+hBP
+phpNVHFEMCRd060KDaeUkK/Gj8LYBUPyWK9UXIP4dTySmv1kcIos1vDqEx9SRVta
+3/2lmADnQ/YfmnAg20IK2bpB/vysxPE4a3mI202ftYD0kWA8YkFlsF+00Euq+7l3
+oxjuCGaiu0W3+x4e0b/lOQWMpeg8gtYnnX6Vx3OjaxML1Yzh1z+uR2Zx4twoZu0=
+=rFWF
+-----END PGP SIGNATURE-----
