@@ -1,6 +1,8 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/pinger/Attic/pinger-0.32c.ebuild,v 1.4 2008/04/22 13:33:05 drac Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/pinger/Attic/pinger-0.32c.ebuild,v 1.5 2011/03/28 21:15:43 radhermit Exp $
+
+EAPI=2
 
 inherit eutils autotools
 
@@ -14,29 +16,24 @@ SLOT="0"
 KEYWORDS="~amd64 ~ppc ~x86"
 IUSE="gtk nls"
 
-RDEPEND="gtk? ( >=x11-libs/gtk+-2.4 )
+RDEPEND="gtk? ( >=x11-libs/gtk+-2.4:2 )
 	sys-libs/ncurses"
 DEPEND="${RDEPEND}
 	dev-util/pkgconfig"
 
-src_unpack() {
-	unpack ${A}
-	cd "${S}"
-
+src_prepare() {
 	epatch "${FILESDIR}"/disable_gtk.patch
 	cp "${WORKDIR}"/gtk-2.0-for-pinger.m4 m4/
 
 	AT_M4DIR="m4" eautoreconf
 }
 
-src_compile() {
+src_configure() {
 	! use nls && myconf="${myconf} --disable-nls"
 
 	econf \
 		$(use_enable gtk) \
-		${myconf} || die "econf failed"
-
-	emake || die "emake failed"
+		${myconf}
 }
 
 src_install() {
