@@ -1,6 +1,10 @@
 # ChangeLog for net-analyzer/pinger
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/pinger/ChangeLog,v 1.11 2008/04/22 13:33:05 drac Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/pinger/ChangeLog,v 1.12 2011/03/28 21:15:43 radhermit Exp $
+
+  28 Mar 2011; Tim Harder <radhermit@gentoo.org> pinger-0.32.ebuild,
+  pinger-0.32c.ebuild:
+  Update to EAPI=2 and use slot deps for gtk+.
 
   22 Apr 2008; Samuli Suominen <drac@gentoo.org> pinger-0.32.ebuild,
   pinger-0.32c.ebuild:
